# libjpeg-turbo

./: .gitignore  CMakeLists.txt
java/: CMakeLists.txt
libjpeg_api/: CMakeLists.txt
libjpeg_api/sharedlib/: CMakeLists.txt
md5/: CMakeLists.txt  md5cmp.c
release/: installer.nsi.in
simd/: CMakeLists.txt  jsimdcfg.inc.h
simd/arm/: jsimd.c
simd/arm64/: jsimd.c
simd/i386/: jsimd.c
simd/loongson/: jsimd.c
simd/mips/: jsimd.c
simd/powerpc/: jsimd.c
simd/x86_64/: jsimd.c
turbojpeg_api/: CMakeLists.txt
win/vs2013-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cjpeg-static.vcxproj  cjpeg-static.vcxproj.filters  dist.vcxproj  dist.vcxproj.filters  djpeg-static.vcxproj  djpeg-static.vcxproj.filters  installer.vcxproj  installer.vcxproj.filters  jconfigint.h  jpeg-static.vcxproj  jpeg-static.vcxproj.filters  jpegtran-static.vcxproj  jpegtran-static.vcxproj.filters  libjpeg-turbo.sln  rdjpgcom.vcxproj  rdjpgcom.vcxproj.filters  tarball.vcxproj  tarball.vcxproj.filters  testclean.vcxproj  testclean.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters  wrjpgcom.vcxproj  wrjpgcom.vcxproj.filters
win/vs2013-x64/Debug/: jpeg-static-64d.lib  jpeg64d.lib
win/vs2013-x64/Release/: jpeg-static-64.lib  jpeg64.lib
win/vs2013-x64/md5/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  md5cmp.vcxproj  md5cmp.vcxproj.filters
win/vs2013-x64/sharedlib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cjpeg.vcxproj  cjpeg.vcxproj.filters  djpeg.vcxproj  djpeg.vcxproj.filters  jcstest.vcxproj  jcstest.vcxproj.filters  jpeg.vcxproj  jpeg.vcxproj.filters  jpegtran.vcxproj  jpegtran.vcxproj.filters
win/vs2013-x64/simd/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  jsimdcfg.vcxproj  jsimdcfg.vcxproj.filters  simd-objs.vcxproj  simd-objs.vcxproj.filters  simd.vcxproj  simd.vcxproj.filters
win/vs2013-x86/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cjpeg-static.vcxproj  cjpeg-static.vcxproj.filters  dist.vcxproj  dist.vcxproj.filters  djpeg-static.vcxproj  djpeg-static.vcxproj.filters  installer.vcxproj  installer.vcxproj.filters  jconfigint.h  jpeg-static.vcxproj  jpeg-static.vcxproj.filters  jpegtran-static.vcxproj  jpegtran-static.vcxproj.filters  libjpeg-turbo.sln  rdjpgcom.vcxproj  rdjpgcom.vcxproj.filters  tarball.vcxproj  tarball.vcxproj.filters  testclean.vcxproj  testclean.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters  wrjpgcom.vcxproj  wrjpgcom.vcxproj.filters
win/vs2013-x86/Debug/: jpeg-static-32d.lib  jpeg32d.lib
win/vs2013-x86/Release/: jpeg-static-32.lib  jpeg32.lib
win/vs2013-x86/md5/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  md5cmp.vcxproj  md5cmp.vcxproj.filters
win/vs2013-x86/sharedlib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cjpeg.vcxproj  cjpeg.vcxproj.filters  djpeg.vcxproj  djpeg.vcxproj.filters  jcstest.vcxproj  jcstest.vcxproj.filters  jpeg.vcxproj  jpeg.vcxproj.filters  jpegtran.vcxproj  jpegtran.vcxproj.filters
win/vs2013-x86/simd/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  jsimdcfg.vcxproj  jsimdcfg.vcxproj.filters  simd-objs.vcxproj  simd-objs.vcxproj.filters  simd.vcxproj  simd.vcxproj.filters
